# claude-agent-sdk-rust

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
docs/: architecture.md
examples/: include_partial_messages.rs  max_budget_usd.rs  multi_turn.rs  quick_start.rs  sdk_mcp_calculator.rs  setting_sources.rs  stderr_callback.rs  stream_input.rs  system_prompt.rs  tools_option.rs
skills/skill/: SKILL.md
skills/skill/references/: examples.md  runtime-session-store.md
skills/skill/scripts/: run-validation.sh
specs/: handover-pending.md
src/: client.rs  control.rs  error.rs  lib.rs  message_parser.rs  options.rs  query.rs  sdk_mcp.rs  types.rs
src/session/: batcher.rs  history.rs  import.rs  materialize.rs  memory.rs  mod.rs  mutations.rs  paths.rs
src/transport/: mod.rs  subprocess.rs
tests/: errors.rs  live_client.rs  live_query.rs  message_parser.rs  real_transcript_compat.rs  types.rs
