[package]
name = "claude-agent-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust port of the Claude Agent SDK with 1:1 Claude message compatibility"
license = "MIT"

[lib]
name = "claude_agent_sdk"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "macros", "rt", "rt-multi-thread", "time", "fs"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
tracing = "0.1"
async-trait = "0.1"
which = "6"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
